@@ -395,4 +395,36 @@ public class StatsComponentTest extends AbstractSolrTestCase {
               400);
 
   }
+
+  //SOLR-3177
+  public void testStatsExcludeFilterQuery() throws Exception {
+    SolrCore core = h.getCore();
+    assertU(adoc("id", "1"));
+    assertU(adoc("id", "2"));
+    assertU(adoc("id", "3"));
+    assertU(adoc("id", "4"));
+    assertU(commit());
+
+    Map<String, String> args = new HashMap<String, String>();
+    args.put(CommonParams.Q, "*:*");
+    args.put(StatsParams.STATS, "true");
+    args.put(StatsParams.STATS_FIELD, "{!ex=id}id");
+    args.put("fq", "{!tag=id}id:[2 TO 3]");
+    SolrQueryRequest req = new LocalSolrQueryRequest(core, new MapSolrParams(args));
+
+    assertQ("test exluding filter query", req
+            , "//lst[@name='id']/double[@name='min'][.='1.0']"
+            , "//lst[@name='id']/double[@name='max'][.='4.0']");
+
+    args = new HashMap<String, String>();
+    args.put(CommonParams.Q, "*:*");
+    args.put(StatsParams.STATS, "true");
+    args.put(StatsParams.STATS_FIELD, "{!key=id2}id");
+    args.put("fq", "{!tag=id}id:[2 TO 3]");
+    req = new LocalSolrQueryRequest(core, new MapSolrParams(args));
+
+    assertQ("test rename field", req
+            , "//lst[@name='id2']/double[@name='min'][.='2.0']"
+            , "//lst[@name='id2']/double[@name='max'][.='3.0']");
+  }
 }
